turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:52: error: type mismatch;
 found   : Array[java.awt.Color]
 required: Array[Char]
			step(colors,rule);
                             ^